--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.0.36",
+    "@types/dotenv": "^2.0.19",
     "@types/express": "^4.0.34",
+    "bluebird": "^3.4.6",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jsforce": "^1.7.1"
   }
