--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bluebird": "^3.0.36",
-    "@types/dotenv": "^2.0.19",
-    "@types/express": "^4.0.34",
     "bluebird": "^3.4.6",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "jsforce": "^1.7.1"
+    "express-session": "^1.14.2",
+    "jsforce": "^1.7.1",
   }
 }
