--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jsforce": "^1.7.1"
+  },
+  "devDependencies": {
+    "create-react-app": "^1.0.2"
   }
 }
